Fixed problems with responsivness on small devices

--- a/client/src/styles/components/_gallery.scss
+++ b/client/src/styles/components/_gallery.scss
@@ -24,17 +24,16 @@
   margin: 0;
   overflow: hidden;
   background-color: #000;
-}
 
-.imgs img {
-  opacity: 0.7;
-  -webkit-transition: transform 0.5, opacity 0.5s;
-  transition: transform 0.5, opacity 0.5s;
-}
-
-.imgs img:hover {
-  opacity: 1;
-  transform:  opacity 0.5s;
+  img {
+    opacity: 0.7;
+    -webkit-transition: transform 0.5, opacity 0.5s;
+    transition: transform 0.5, opacity 0.5s;
+  }
+  img:hover {
+    opacity: 1;
+    transform: opacity 0.5s;
+  }
 }
 
 @keyframes fadeIn {
@@ -48,7 +47,7 @@
   animation: fadeIn 0.5s ease-in 1 forwards;
 }
 
-.goHome { 
+.goHome {
   position: fixed;
   bottom: 0px;
   left: 0px;
