--- a/client/src/styles/components/_uploadBox.scss
+++ b/client/src/styles/components/_uploadBox.scss
@@ -25,8 +25,8 @@
 
 @media (max-width: $breakpoint) {
   .uploadBox {
-    margin-bottom: $xl-size;
     min-width: 80vw;
+    min-height: 280px;
   }
 }
 
